--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
+    "axois": "^0.0.1-security",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
@@ -20,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
