--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.22.0",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.9",
@@ -27,6 +28,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "serpapi": "^2.1.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
